--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "copy-bootstrap": "cpx ./node_modules/bootstrap/dist/css/bootstrap.css dist/ && cpx ./node_modules/bootstrap/dist/js/bootstrap.js dist/",
     "copy-jquery": "cpx ./node_modules/jquery/dist/jquery.js dist/",
-    "build": "cpx *.{html,css} dist/ && npm run copy-bootstrap && npm run copy-jquery",
+    "copy-app": "npx tsc app.ts && cpx ./app.js dist/",
+    "build": "cpx *.{html,css} dist/ && npm run copy-bootstrap && npm run copy-jquery && npm run copy-app",
     "start": "browser-sync start -c bs-config.js"
   },
   "author": "Rainer Stropek",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.22",
     "browser-sync": "^2.26.3",
     "cpx": "^1.5.0"
   }
